# video-metadata-pipeline-template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: router.py
app/core/: config.py  database.py  storage.py
app/workers/: processor.py
migrations/: 001_schema.sql
