[project]
name = "video-metadata-pipeline-template"
version = "1.0.0"
description = "Async media processing pipeline: FastAPI + ARQ + MinIO + PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "arq>=0.26.0",
    "minio>=7.2.0",
    "pillow>=10.4.0",
    "pymupdf>=1.24.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
